@@ -107,6 +107,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: Trace a message when a property file referenced from the settings doesn't exixts (IVY-1074)
 - IMPROVEMENT: use defaultconf in combination with defaultconfmapping (IVY-1135) (thanks to Jon Schneider)
 
+- FIX: Creation of symlinks problematic in Windows with Cygwin 1.7 (IVY-1165)
 - FIX: add ability to programmatically change default resolver (IVY-1163) (thanks to Jason Trump)
 - FIX: ivy.settings.dir space escaping problem (IVY-1162)
 - FIX: Ivy cannot parse alternate format for Maven MD5 files (IVY-1155)
